<resources>
    <string name="app_name">CupidKnot</string>
    <string name="confirm_password">Confirm Password</string>
    <string name="password">Password</string>
    <string name="phone_number">Phone Number</string>
    <string name="email_id">Email Id</string>
    <string name="full_name">Full Name</string>
    <string name="register">Register</string>
    <string name="because_we_care_till_the_end">Because We Care, Till The End.</string>
</resources>
